# simple-ats-rating

./: .dockerignore  .env.example  .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml
.github/workflows/: docker-publish.yml  smoke-test.yml
app/: __init__.py
app/api/: deps.py
app/api/v1/: __init__.py  auth.py  candidates.py  exports.py  interviewer.py  logs.py  scores.py  sessions.py  statistics.py  templates.py  users.py
app/core/: config.py  exceptions.py  security.py
app/db/: init_db.py  mongodb.py
app/middleware/: logging.py
app/models/: candidate.py  operation_log.py  score.py  session.py  session_interviewer.py  template.py  user.py
app/schemas/: __init__.py  auth.py  candidate.py  common.py  export.py  score.py  session.py  statistics.py  template.py  user.py
app/services/: __init__.py  auth_service.py  candidate_service.py  export_service.py  log_service.py  score_service.py  session_service.py  statistics_service.py  template_service.py  user_service.py
app/utils/: datetime.py  excel_utils.py  file_utils.py  qrcode_utils.py  response.py  validators.py
docker/: .env.example  docker-compose.yml
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
simple-ats-rating-ui/: .env.example  .gitignore  build.ts  openapi.json  package.json
simple-ats-rating-ui/src/: App.tsx  index.ts  server-prod.ts
simple-ats-rating-ui/src/components/: README.md  index.ts
simple-ats-rating-ui/src/hooks/: index.ts  useAuth.ts  useToast.ts
simple-ats-rating-ui/src/pages/: AdminDashboard.tsx  CandidateDashboard.tsx  InterviewerDashboard.tsx  (+2 more)
(+132 files in other folders)
